/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a commented-out sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.0.2/userguide/tutorial_java_projects.html
 */

// Apply the java plugin to add support for Java
buildscript {
  repositories {
    mavenCentral()
    maven {
      url "https://plugins.gradle.org/m2/"
    }
  }
  dependencies {
    classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.7.RELEASE"
  }
}

apply plugin: 'java'
apply plugin: "org.springframework.boot"

sourceCompatibility = '9' // -source
targetCompatibility = '9' // -target

ext.moduleName = 'com.github.wreulicke'

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

compileJava {
    // inputs.property("moduleName", moduleName)
    doFirst {
        // options.compilerArgs = [
        //     '--module-path', classpath.asPath,
        // ]
        options.forkOptions.jvmArgs = ['--module-path', classpath.asPath]
        options.fork = true
        options.forkOptions.executable = 'javac'
        classpath = files()
    }
}

compileTestJava {
    // inputs.property("moduleName", moduleName)
    doFirst {
        // options.compilerArgs = [
        //     '--module-path', classpath.asPath,
        //     '--add-modules', 'junit',
        //     '--add-reads', "$moduleName=junit",
        //     '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
        // ]
        options.forkOptions.jvmArgs = ['--module-path', classpath.asPath]
        options.fork = true
        options.forkOptions.executable = 'javac'
        classpath = files()
    }
}

test {
    // inputs.property("moduleName", moduleName)
    doFirst {
        jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'ALL-MODULE-PATH',
            '--add-reads', "$moduleName=junit",
            '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
        ]
        classpath = files()
    }
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-web:1.5.7.RELEASE'
    testCompile 'junit:junit:4.12'
}

